--- a/src/ComicBookGallery/Views/ComicBooks/Detail.cshtml
+++ b/src/ComicBookGallery/Views/ComicBooks/Detail.cshtml
@@ -1,25 +1,43 @@
-﻿@{
+﻿@model ComicBookGallery.Models.ComicBook
+
+@{
+
     Layout = "~/Views/Shared/_Layout.cshtml";
-    ViewBag.Title = "Comic Book Detail";
+    ViewBag.Title = Model.DisplayText;
 
 }
+<h2>@Model.DisplayText</h2>
+
+<div class="row">
+    <div class="col-md-6">
+        <div class="well">
+            <h5><label>Series Title:</label>@Model.SeriesTitle</h5>
+            <h5><label>Issue #:</label> @Model.IssueNumber</h5>
+            <h5><label>Description :</label> @Html.Raw(Model.DescriptionHtml)</h5>
+            <h5><label>Favorite:</label> Yes</h5>
+            @if (Model.Artists.Length > 0)
+            {
+                <h5>Artists:</h5>
+                <div>
+                    <ul>
+                        @foreach (var artist in Model.Artists)
+                        {
+                            <li>@artist.Role: @artist.Name</li>
+
+                        }
+                    </ul>
+                </div>
+            }
+        </div>
+        <h5>Description</h5>
+        <p>Final issue! Witness the final hours of Doctor Octopus' life and his one, last, great act of revenge! Even if Spider-Man survives...<strong>will Peter Parker?</strong></p>
+    </div>
+    <div class="col-md-6">
+        <img src="/Images/@Model.CoverImageFileName"
+             alt="The Amazing Spider-Man #700" class="img-responsive" />
+    </div>
+</div>
 
 
-        <h1>@ViewBag.SeriesTitle</h1>
-        <h2>Issue #@ViewBag.IssueNumber</h2>
-        <div>@Html.Raw(ViewBag.Description)</div>
-        @if (ViewBag.Artists.Length > 0)
-        {
-            <h2>Artists</h2>
-            <div>
-                <ul>
-                    @foreach (var artist in ViewBag.Artists)
-                    {
-                        <li>
-                            @artist
-                        </li>
-                    }
-                </ul>
-            </div>
-        }
+
 
